; ModuleID = '/home/carl/AnghaBench/vlc/modules/hw/vaapi/extr_vlc_vaapi.c_vlc_vaapi_IsVideoProcFilterAvailable.c'
source_filename = "/home/carl/AnghaBench/vlc/modules/hw/vaapi/extr_vlc_vaapi.c_vlc_vaapi_IsVideoProcFilterAvailable.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@VAProcFilterCount = common dso_local global i32 0, align 4
@vaQueryVideoProcFilters = common dso_local global i32 0, align 4
@VLC_SUCCESS = common dso_local global i32 0, align 4
@VLC_EGENERIC = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @vlc_vaapi_IsVideoProcFilterAvailable(i32* %0, i32 %1, i32 %2, i64 %3) #0 {
  %5 = alloca i32, align 4
  %6 = alloca i32*, align 8
  %7 = alloca i32, align 4
  %8 = alloca i32, align 4
  %9 = alloca i64, align 8
  %10 = alloca i8*, align 8
  %11 = alloca i64, align 8
  %12 = alloca i32, align 4
  %13 = alloca i32, align 4
  %14 = alloca i32, align 4
  store i32* %0, i32** %6, align 8
  store i32 %1, i32* %7, align 4
  store i32 %2, i32* %8, align 4
  store i64 %3, i64* %9, align 8
  %15 = load i32, i32* @VAProcFilterCount, align 4
  %16 = zext i32 %15 to i64
  %17 = call i8* @llvm.stacksave()
  store i8* %17, i8** %10, align 8
  %18 = alloca i64, i64 %16, align 16
  store i64 %16, i64* %11, align 8
  %19 = load i32, i32* @VAProcFilterCount, align 4
  store i32 %19, i32* %12, align 4
  %20 = load i32*, i32** %6, align 8
  %21 = load i32, i32* @vaQueryVideoProcFilters, align 4
  %22 = load i32, i32* %7, align 4
  %23 = load i32, i32* %8, align 4
  %24 = call i32 @VA_CALL(i32* %20, i32 %21, i32 %22, i32 %23, i64* %18, i32* %12)
  store i32 0, i32* %13, align 4
  br label %25

25:                                               ; preds = %39, %4
  %26 = load i32, i32* %13, align 4
  %27 = load i32, i32* %12, align 4
  %28 = icmp ult i32 %26, %27
  br i1 %28, label %29, label %42

29:                                               ; preds = %25
  %30 = load i64, i64* %9, align 8
  %31 = load i32, i32* %13, align 4
  %32 = zext i32 %31 to i64
  %33 = getelementptr inbounds i64, i64* %18, i64 %32
  %34 = load i64, i64* %33, align 8
  %35 = icmp eq i64 %30, %34
  br i1 %35, label %36, label %38

36:                                               ; preds = %29
  %37 = load i32, i32* @VLC_SUCCESS, align 4
  store i32 %37, i32* %5, align 4
  store i32 1, i32* %14, align 4
  br label %46

38:                                               ; preds = %29
  br label %39

39:                                               ; preds = %38
  %40 = load i32, i32* %13, align 4
  %41 = add i32 %40, 1
  store i32 %41, i32* %13, align 4
  br label %25

42:                                               ; preds = %25
  %43 = load i32, i32* @VLC_EGENERIC, align 4
  store i32 %43, i32* %5, align 4
  store i32 1, i32* %14, align 4
  br label %46

44:                                               ; No predecessors!
  %45 = load i32, i32* @VLC_EGENERIC, align 4
  store i32 %45, i32* %5, align 4
  store i32 1, i32* %14, align 4
  br label %46

46:                                               ; preds = %44, %42, %36
  %47 = load i8*, i8** %10, align 8
  call void @llvm.stackrestore(i8* %47)
  %48 = load i32, i32* %5, align 4
  ret i32 %48
}

; Function Attrs: nounwind
declare i8* @llvm.stacksave() #1

declare dso_local i32 @VA_CALL(i32*, i32, i32, i32, i64*, i32*) #2

; Function Attrs: nounwind
declare void @llvm.stackrestore(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
